syntax = "proto3";

package api.protobuf;
option go_package = "github.com/b2network/b2-indexer/api/protobuf/vo";

message TransactionNotifyRequest {
  int64 requestType = 1;
  string requestId = 2;
  string requestDetail = 3;
  string extraInfo = 4;
}

message TransactionNotifyResponse  {
  int64 code = 1; 
  string requestId = 2;
  string message = 3; 
};